--- a/Moviekus/Moviekus/Views/Genres/GenresPage.xaml
+++ b/Moviekus/Moviekus/Views/Genres/GenresPage.xaml
@@ -10,7 +10,7 @@
         <ToolbarItem
                 Text="Neu" 
                 Command="{Binding AddGenreCommand}"
-                IconImageSource="add.png">
+                IconImageSource="new.png">
         </ToolbarItem>
 
     </ContentPage.ToolbarItems>
