--- a/Moviekus/Moviekus/Views/RatingBar.xaml
+++ b/Moviekus/Moviekus/Views/RatingBar.xaml
@@ -2,6 +2,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Moviekus.Views.RatingBar">
     <ContentView.Content>
-        <StackLayout x:Name="stkRatingbar" Orientation="Horizontal" />
+        <StackLayout x:Name="ratingbar" Orientation="Horizontal" />
     </ContentView.Content>
 </ContentView>
