--- a/Moviekus/Moviekus/Views/Filter/FilterEntryRatingCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryRatingCellTemplate.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:customcontrol="clr-namespace:Moviekus.Views"
+             xmlns:customcontrol="clr-namespace:Moviekus.Views.Controls"
              mc:Ignorable="d"
              x:Class="Moviekus.Views.Filter.FilterEntryRatingCellTemplate">
   <ViewCell.View>
