Gruppierte Darstellung in FilterDetailPage

--- a/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
@@ -23,11 +23,13 @@
 
     <ContentPage.Content>
         <StackLayout Padding="14">
-            <Label Text="Name" />
+            <Label Text="Name" FontSize="Title" />
             <Entry Text="{Binding Filter.Name}"/>
 
-            <ListView x:Name="FilterEntryListView"
+            <ListView 
                 ItemsSource="{Binding FilterEntries}"
+                GroupDisplayBinding="{Binding Key}"
+                IsGroupingEnabled="True"
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
                 SelectedItem="{Binding SelectedFilterEntry}"
