Icons umbenannt wegen Inkompatibilität im Android-Projekt

--- a/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterDetailPage.xaml
@@ -15,8 +15,8 @@
     </ContentPage.Resources>
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Hinzufügen" IconImageSource="add.png" Command="{Binding AddEntryCommand}" />
-        <ToolbarItem Text="Entfernen" IconImageSource="remove.png" Command="{Binding RemoveEntryCommand}" />
+        <ToolbarItem Text="Hinzufügen" IconImageSource="add_entry.png" Command="{Binding AddEntryCommand}" />
+        <ToolbarItem Text="Entfernen" IconImageSource="remove_entry.png" Command="{Binding RemoveEntryCommand}" />
         <ToolbarItem Text="Löschen" IconImageSource="delete.png" Command="{Binding DeleteCommand}" />
         <ToolbarItem Text="Speichern" IconImageSource="save.png" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
