--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -10,7 +10,7 @@
              x:Name="BrowseMoviesPage">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="new.png"/>
+        <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="addnew.png"/>
         <ToolbarItem Text="Filter" Command="{Binding FilterCommand}" IconImageSource="filter.png"/>
     </ContentPage.ToolbarItems>
 
