LogViewer und weitere Log-Ausgaben eingebaut

--- a/Moviekus/Moviekus/Views/SettingsPage.xaml
+++ b/Moviekus/Moviekus/Views/SettingsPage.xaml
@@ -7,6 +7,7 @@
              x:Class="Moviekus.Views.SettingsPage">
 
     <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Log" IconImageSource="logfile.png" Command="{Binding OpenLogCommand}" />
         <ToolbarItem Text="Speichern" IconImageSource="save.png" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
 
