OneDrive Up- und Download implementiert

--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -12,6 +12,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="addnew.png"/>
         <ToolbarItem Text="Filter" Command="{Binding FilterCommand}" IconImageSource="filter.png"/>
+        <ToolbarItem Text="OneDrive" Command="{Binding OneDriveCommand}" IconImageSource="onedrive.png"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Resources>
