Sortierung für Movies ergänzt

--- a/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MoviesPage.xaml
@@ -12,7 +12,8 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Neu" Command="{Binding AddMovieCommand}" IconImageSource="addnew.png"/>
         <ToolbarItem Text="Filter" Command="{Binding FilterCommand}" IconImageSource="filter.png"/>
-        <ToolbarItem Text="OneDrive" Command="{Binding OneDriveCommand}" IconImageSource="onedrive.png"/>
+        <ToolbarItem Text="Sortierung" Command="{Binding OrderCommand}" IconImageSource="sorting.png" />
+        <ToolbarItem Text="OneDrive" Command="{Binding OneDriveCommand}" Order="Secondary" IconImageSource="onedrive.png"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Resources>
