--- a/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Genres/GenreDetailPage.xaml
@@ -15,7 +15,7 @@
     <ContentPage.Content>
 
         <StackLayout Padding="14">
-            <Label Text="Name" />
+            <Label Text="Name" Style="{StaticResource HeadingLabelStyle}"/>
             <Entry Text="{Binding Genre.Name}"/>
         </StackLayout>
 
