--- a/Moviekus/Moviekus/Views/Sources/SourceDetailPage.xaml
+++ b/Moviekus/Moviekus/Views/Sources/SourceDetailPage.xaml
@@ -15,12 +15,11 @@
     <ContentPage.Content>
 
         <StackLayout Padding="14">
-            <Label Text="Name" />
+            <Label Text="Name" Style="{StaticResource HeadingLabelStyle}"/>
             <Entry Text="{Binding Source.Name}"/>
-            <Label Text="Art der Quelle" />
+            <Label Text="Art der Quelle" Style="{StaticResource HeadingLabelStyle}"/>
             <Label Text="{Binding Source.SourceTypeName}" FontSize="Medium"/>
-            <Picker Title="-- Andere Art wählen --"
-                    FontSize="Small"
+            <Picker FontSize="Small"
                     TitleColor="Blue"                    
                     ItemsSource="{Binding SourceTypes}"
                     ItemDisplayBinding="{Binding Name}"                     
