--- a/Moviekus/Moviekus/App.xaml
+++ b/Moviekus/Moviekus/App.xaml
@@ -29,12 +29,18 @@
                 <Setter Property="Margin" Value="2" />
                 <Setter Property="Padding" Value="0" />
                 <Setter Property="HasShadow" Value="True" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="HorizontalOptions" Value="Center" />
             </Style>
             <Style x:Key="CoverImageStyle" TargetType="Image">
                 <Setter Property="VerticalOptions" Value="Center" />
                 <Setter Property="HorizontalOptions" Value="Center" />
                 <Setter Property="WidthRequest" Value="120" />
-                <Setter Property="HeightRequest" Value="180" />
+                <Setter Property="HeightRequest" Value="160" />
+                <Setter Property="Aspect" Value="AspectFill" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="VerticalOptions" Value="FillAndExpand" />
+                <Setter Property="Margin" Value="0,10,0,10" />
             </Style>
 
         </ResourceDictionary>
