--- a/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieEditPage.xaml
@@ -10,6 +10,7 @@
              Title="{Binding Title}">
     
     <ContentPage.ToolbarItems>
+        <ToolbarItem Text="ImDb" IconImageSource="imdb.png" Command="{Binding ImDbCommand}" />
         <ToolbarItem Text="MovieDb" IconImageSource="moviedb.png" Command="{Binding MovieDbCommand}" />
         <ToolbarItem Text="Speichern" IconImageSource="save.png" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
