--- a/Moviekus/Moviekus/Views/Movies/MovieSelectionPage.xaml
+++ b/Moviekus/Moviekus/Views/Movies/MovieSelectionPage.xaml
@@ -31,7 +31,7 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="40" />
+                            <ColumnDefinition Width="50" />
                         </Grid.ColumnDefinitions>
                         <Label Text="Cover" Font="Bold, 14" BackgroundColor="#63b8ff" TextColor="Black" Grid.Column="0" />
                         <Label Text="Titel" Font="Bold, 14" BackgroundColor="#63b8ff" TextColor="Black" Grid.Column="1" />
@@ -46,10 +46,13 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="100"/>
                                         <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="40" />
+                                        <ColumnDefinition Width="50" />
                                     </Grid.ColumnDefinitions>
                                     <Image x:Name="coverImage" Source="{Binding Cover, Converter={StaticResource ByteArrayToImage}}" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="80" HeightRequest="120" Grid.Column="0"/>
-                                    <Label Text="{Binding Title}" FontSize="Subtitle" MaxLines="2" Grid.Column="1" />
+                                    <StackLayout Grid.Column="1" >
+                                        <Label Text="{Binding Title}" FontSize="Title" MaxLines="2" />
+                                        <Label Text="{Binding Genre}" FontSize="Subtitle" MaxLines="2" />
+                                    </StackLayout>
                                     <Label Text="{Binding ReleaseYear}" FontSize="Subtitle" Grid.Column="2" />
                                 </Grid>
                                 <Label Text="{Binding Overview}" FontSize="Micro" MaxLines="10" />
