--- a/Moviekus/Moviekus/Views/SettingsPage.xaml
+++ b/Moviekus/Moviekus/Views/SettingsPage.xaml
@@ -12,18 +12,28 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
+        <ScrollView>
+            <StackLayout BackgroundColor="{StaticResource BackgroundPrimary}">
+                <Label Text="MovieDB Einstellungen" Style="{StaticResource HeadingLabelStyle}" FontSize="Title" />
+                <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+                <Label Text="Api-Key" Margin="5" Style="{StaticResource HeadingLabelStyle}"/>
+                <Entry Text="{Binding Settings.MovieDb_ApiKey}" Margin="5"/>
+                <Label Text="Language" Margin="5" Style="{StaticResource HeadingLabelStyle}"/>
+                <Entry Text="{Binding Settings.MovieDb_Language}" Margin="5"/>
 
-        <StackLayout>
-            <Label Text="MovieDB Einstellungen" Style="{StaticResource HeadingLabelStyle}" />
-            <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
-            <Label Text="Api-Key" Margin="5"/>
-            <Entry Text="{Binding Settings.MovieDb_ApiKey}" Margin="5"/>
-            <Label Text="Language" Margin="5"/>
-            <Entry Text="{Binding Settings.MovieDb_Language}" Margin="5"/>
+                <Label Text="ImDB Einstellungen" Style="{StaticResource HeadingLabelStyle}" FontSize="Title"/>
+                <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+                <Label Text="Api-Key" Margin="5" Style="{StaticResource HeadingLabelStyle}"/>
+                <Entry Text="{Binding Settings.ImDb_ApiKey}" Margin="5"/>
+                <Label Text="Language" Margin="5" Style="{StaticResource HeadingLabelStyle}"/>
+                <Entry Text="{Binding Settings.ImDb_Language}" Margin="5"/>
 
-            <Label Text="OneDrive Einstellungen" Style="{StaticResource HeadingLabelStyle}" />
-            <Button Text="OneDrive-Verbindung zurücksetzen" Command="{Binding ResetOneDriveVCommand}"/>
-        </StackLayout>
-
+                <Label Text="OneDrive Einstellungen" Style="{StaticResource HeadingLabelStyle}" FontSize="Title"/>
+                <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+                <Label Text="Application-Id" Margin="5" Style="{StaticResource HeadingLabelStyle}"/>
+                <Entry Text="{Binding Settings.OneDrive_ApplicationId}" Margin="5"/>
+                <Button Text="OneDrive-Verbindung zurücksetzen" Command="{Binding ResetOneDriveVCommand}"/>
+            </StackLayout>
+         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
