--- a/Moviekus/Moviekus/App.xaml
+++ b/Moviekus/Moviekus/App.xaml
@@ -18,6 +18,9 @@
             <Style TargetType="ListView">
                 <Setter Property="BackgroundColor" Value="{StaticResource BackgroundPrimary}" />
             </Style>
+            <Style TargetType="StackLayout">
+                <Setter Property="BackgroundColor" Value="{StaticResource BackgroundPrimary}" />
+            </Style>
             <Style x:Key="HeadingLabelStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="#3d5f8a" />
                 <Setter Property="FontAttributes" Value="Bold" />
