--- a/Moviekus/Moviekus/Views/Filter/FilterEntryDateCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryDateCellTemplate.xaml
@@ -8,7 +8,16 @@
              x:Class="Moviekus.Views.Filter.FilterEntryDateCellTemplate">
   <ViewCell.View>
         <StackLayout Padding="5">
-            <customcontrol:NullableDatePicker DateFrom="{Binding DateFrom}" DateTo="{Binding DateTo}" ShowRange="True" />
+            <StackLayout Orientation="Horizontal">
+                <Picker 
+                    FontSize="Small"
+                    VerticalOptions="Start"
+                    ItemsSource="{Binding Operators}"
+                    ItemDisplayBinding="{Binding OperatorName}"
+                    IsVisible="{Binding HasDate}"
+                    SelectedItem="{Binding SelectedOperator, Mode=TwoWay}"/>
+                <customcontrol:NullableDatePicker DateFrom="{Binding DateFrom}" DateTo="{Binding DateTo}" ShowRange="{Binding ShowRange}"/>
+            </StackLayout>
         </StackLayout>
-  </ViewCell.View>
+    </ViewCell.View>
 </ViewCell>
