--- a/Moviekus/Moviekus/Views/Filter/FilterEntryGenreCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryGenreCellTemplate.xaml
@@ -7,11 +7,17 @@
              x:Class="Moviekus.Views.Filter.FilterEntryGenreCellTemplate">
   <ViewCell.View>
         <StackLayout Padding="5">
-            <Picker FontSize="Small"
-                    TitleColor="Blue"                    
+            <StackLayout Orientation="Horizontal">
+                <Picker 
+                    FontSize="Small"
+                    ItemsSource="{Binding Operators}"
+                    ItemDisplayBinding="{Binding OperatorName}"
+                    SelectedItem="{Binding SelectedOperator, Mode=TwoWay}"/>
+                <Picker FontSize="Small"
                     ItemsSource="{Binding Genres}"
                     ItemDisplayBinding="{Binding Name}"                     
                     SelectedItem="{Binding Genre, Mode=TwoWay}"/>
+            </StackLayout>
         </StackLayout>
     </ViewCell.View>
 </ViewCell>
