--- a/Moviekus/Moviekus/Views/Filter/FilterEntryRuntimeCellTemplate.xaml
+++ b/Moviekus/Moviekus/Views/Filter/FilterEntryRuntimeCellTemplate.xaml
@@ -7,11 +7,17 @@
              x:Class="Moviekus.Views.Filter.FilterEntryRuntimeCellTemplate">
   <ViewCell.View>
         <StackLayout Padding="5">
-            <StackLayout x:Name="RuntimePanel" Orientation="Vertical" >
-                <Label Text="Von (Minuten)" />
+            <StackLayout Orientation="Horizontal">
+                <Picker 
+                    FontSize="Small"
+                    VerticalOptions="Start"
+                    ItemsSource="{Binding Operators}"
+                    ItemDisplayBinding="{Binding OperatorName}"
+                    SelectedItem="{Binding SelectedOperator, Mode=TwoWay}"/>
                 <Entry Text="{Binding FilterEntry.ValueFrom}" HorizontalOptions="Start" />
-                <Label Text="bis (Minuten)" />
-                <Entry Text="{Binding FilterEntry.ValueTo}"  HorizontalOptions="Start"/>
+                <Label Text="und" Margin="5,0,5,0" VerticalOptions="Center" IsVisible="{Binding ShowRange}"/>
+                <Entry Text="{Binding FilterEntry.ValueTo}"  HorizontalOptions="Start" IsVisible="{Binding ShowRange}"/>
+                <Label Text="Minuten" VerticalOptions="Center"/>
             </StackLayout>
         </StackLayout>
     </ViewCell.View>
